vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  gateways: [missng-gw]
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
